# lms

./: .dockerignore  .gitignore  README.md  default.nix  flake.nix  manage.py  process-compose.yaml  pyproject.toml  pytest.ini  shell.nix
docker-files/: uwsgi.ini
frontend/: missing-hashes.json  package.json  tsconfig.build.json  tsconfig.json  vite.config.ts
frontend/src/v1/js/: app.js  main.js  react_app.js  utils.js
frontend/src/v1/js/components/: lazyload.js
frontend/src/v1/js/courses/: courseOfferings.js
frontend/src/v1/js/teaching/: assignmentForm.js  index.js  studentAssignment.js  submissions.js
frontend/src/v1/js/users/: profile.js
frontend/src/v1/scss/center/: _variables.scss  style.scss
frontend/webpack/: v1.config.js
lms/: manage.py  urls.py
lms/apps/core/: math.py  models.py  services.py  utils.py  webpack_loader.py
lms/apps/core/management/commands/: runserver.py
lms/apps/core/migrations/: 0032_savedfilter.py
lms/apps/info_blocks/migrations/: 0006_alter_taggedinfoblock_tag.py
lms/apps/learning/services/: jba_service.py
lms/apps/learning/study/: urls.py  views.py
lms/apps/learning/tests/: test_service_personal_assignment.py
lms/apps/staff/: urls.py  views.py
lms/apps/staff/api/: views.py
lms/apps/templates/admin/: base_site.html
lms/apps/users/: models.py
lms/jinja2/lms/courses/: course_assignment_form.html  course_class_form.html  course_detail.html
lms/jinja2/lms/gradebook/: gradebook_form.html
lms/jinja2/lms/layouts/: _top_menu.html  v1_base.html  v2_base.html
lms/jinja2/lms/staff/: student_faces.html  student_search.html
lms/jinja2/lms/study/: assignment_list.html
lms/jinja2/lms/teaching/: assignments_check_queue.html  student_assignment_detail.html
lms/jinja2/lms/teaching/student_groups/: student_group_update.html
lms/settings/: base.py  extended.py
lms/templates/: _top_menu.html  base.html
nix/: compiled-messages.nix  docker.nix  frontend.nix  migrate.nix  mkPython.nix  overrides-sdist.nix  overrides.nix  pytest.nix  static-assets.nix
npins/: sources.json
