[project]
name = "lms"
version = "0.0.1"
description = "Learning Management System"
requires-python = ">=3.10.0, <3.11"
dependencies = [
    # Core Framework
    "Django~=4.2",
    "django-environ~=0.11.2",
    "Django-jinja~=2.11.0",
    "setuptools",

    # Database
    "psycopg2-binary~=2.9.9",
    "sqlparse~=0.5.0",

    # Django Extensions & Utilities
    "django-model-utils==4.4.0",
    "django-choices==1.7.2",
    "django-vanilla-views==3.0.0",
    "django-autocomplete-light==3.9.4",
    "django-bitfield~=2.2.0",
    "django-filter~=23.5",
    "django-taggit~=5.0.1",
    "django-loginas~=0.3.11",
    "django-webpack-loader~=3.1.0",
    "django-simple-menu~=2.1.3",
    "django-registration-redux~=2.13",

    # Forms & UI
    "django-crispy-forms~=2.2",
    "crispy-bootstrap3~=2024.1",
    "django-recaptcha~=4.0.0",

    # Internationalization
    "django-rosetta~=0.10.0",
    "babel~=2.15.0",
    "pytz",

    # Media & File Handling
    "sorl-thumbnail~=12.10.0",
    "python-magic~=0.4.27",
    "Pillow~=10.3.0",
    "django-storages~=1.14.3",

    # AWS & Email
    "boto3~=1.34.129",
    "django-ses~=4.1.0",

    # Authentication & Authorization
    "rules",
    "social-auth-core~=4.5.4",
    "social-auth-app-django~=5.4.1",
    "cryptography",

    # Task Queue
    "rq~=1.16.2",
    "django-rq~=2.10.1",

    # REST API
    "djangorestframework~=3.15.2",
    "rest-pandas==1.1.0",
    "djangorestframework-camel-case~=1.4.2",

    # Content Processing
    "bleach~=6.1.0",
    "mistune~=3.1.0",

    # Data Import/Export
    "django-import-export~=4.0.9",
    "XlsxWriter~=3.2.0",

    # Jupyter/Notebook
    "nbconvert~=7.16.4",

    # Date & Time
    "icalendar~=5.0.13",
    "python-dateutil~=2.9.0.post0",
    "isoweek~=1.3.3",

    # Data & Validation
    "attrs~=23.2.0",
    "pydantic~=2.10",
    "numpy~=1.26.4",

    # Utilities
    "python-json-logger",
    "requests~=2.32.3",
    "sqids~=0.4.1",
]

[dependency-groups]
dev = [
    "django-debug-toolbar~=4.4.2",
    "beautifulsoup4",
    "testfixtures",
    "factory_boy~=3.3.0",
    "pytest==6.2.5",
    "pytest-django",
    "pytest-cov",
    "pytest-xdist",
    "pytest-mock",
    "pytest-pythonpath",
    "time-machine",
]

[tool.hatch.build.targets.wheel]
packages = ["lms"]

[tool.hatch.build.targets.sdist]
include = ["lms/", "manage.py", "conftest.py", "pytest.ini"]
exclude = ["nix/", "helm/", "npins/", "frontend/", "docs/", "docker-files/"]

[tool.uv]
package = false

[[tool.uv.index]]
name = "pypi"
url = "https://pypi.org/simple"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
